Update BOTNAME and NDH values in config.json

--- a/config.json
+++ b/config.json
@@ -11,16 +11,16 @@
   "EMAIL": "your email",
   "PASSWORD": "your password",
   "OTPKEY": "",
-  "BOTNAME": "─꯭─⃝‌‌𝐒𝐡𝐚𝐡𝐚𝐝𝐚𝐭 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+  "BOTNAME": "★彡[ʀɪᴘᴏɴ~ʙʀᴏ~ʙᴏᴛ]彡★",
   "PREFIX": "/",
   "reactUnsend": ["😡", "🤧", "😤", "😠"],
 
   "ADMINBOT": [
-    "100001039692046",
+    "100003752712692",
     "100001039692046",
     "100001039692046"
   ],
-  "NDH": ["100001039692046"],
+  "NDH": ["100003752712692"],
   "adminOnly": false,
   "ndhOnly": false,
   "adminPaOnly": false,
